# Memory-Calculator

./: .gitignore  README.md  pyproject.toml
examples/: eob_cce_h20_h30_comparison.py  eob_circular_memory_demo.py  fastemriwaveforms_emri_h20_h30_demo.py  seobnrv5ehm_circular_memory_demo.py  seobnrv5ehm_nrhybsur3dq8_cce_h20_h30_comparison.py
examples/output/: fastemriwaveforms_emri_h20_h30_q100000_p0_100_chi0p8.csv  seobnrv5ehm_circular_memory_q2_omega0.00183712.csv  seobnrv5ehm_nrhybsur3dq8_cce_h20_h30_q2_x0.015.csv
src/vacuum_memory_modes/: __init__.py  core.py  few_emri.py  pn.py
src/vacuum_memory_modes/data/: gamma_coeffs_lmax10.npz
