[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "vacuum-memory-modes"
version = "0.1.0"
description = "Minimal vacuum nonlinear-null gravitational-wave memory mode calculator"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy",
    "scipy",
    "sympy",
]

[project.optional-dependencies]
eob = ["pyseobnr", "matplotlib"]
cce = ["pyseobnr", "gwsurrogate", "matplotlib"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
vacuum_memory_modes = ["data/*.npz"]
