[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "vacuum-memory-modes"
version = "0.1.0"
description = "Perturbative calculators for vacuum nonlinear-null gravitational-wave memory modes"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy",
    "scipy",
    "sympy",
]

[project.optional-dependencies]
pyseobnr = ["pyseobnr", "matplotlib"]
nrhybsur3dq8-cce = ["pyseobnr", "gwsurrogate", "matplotlib"]
fastemriwaveforms = ["fastemriwaveforms", "matplotlib"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
vacuum_memory_modes = ["data/*.npz"]
